
2010-04-09  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-mobile.el (org-mobile-check-setup): Make sure that there is
	a binary to compute checksums.

2010-04-08  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-insert-link): Find the link buffer on visible
	frames.
	(org-export-latex-default-packages-alist): hyperref must be loaded
	late.

2010-04-07  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-latex.el (org-export-latex-preprocess): Do not yet protect
	defined entities - these will be taken care of later.
	(org-export-latex-special-chars): Post-process entity replacement.
	(org-export-latex-fontify-headline): Do not yet protect defined
	entities - these will be taken care of later.
	(org-export-latex-tables, org-export-latex-links): Format the
	caption properly.

	* org-entities.el (org-entities-user): Fix typo.

	* org.el (org-prepare-agenda-buffers): Uniquify TODO keywords

	* org-entities.el (org-entities-user): Improve docstring.

2010-04-06  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-entities.el (org-macs): Require org-macs, to be sure that we
	have `declare-function' defined.

2010-04-05  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-latex.el (org-export-latex-classes): Update docstring.

	* org.el (org-format-latex-header): Add cookies to the header.
	(org-splice-latex-header): Implement placement according to
	cookies.

2010-04-04  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-publish.el (org-publish-aux-preprocess): Control case
	sensitivity.

2010-04-04  Bastien Guerry  <bzg@altern.org>

	* org.el (org-splice-latex-header): Fix typo.

2010-04-04  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-latex.el (org-export-latex-make-header): Use
	`org-splice-latex-header' to build the header.
	(org-export-latex-classes): Update docstring.

	* org.el (org-splice-latex-header): New function.
	(org-create-formula-image): Use `org-splice-latex-header' to build
	the header.
